Fix nullable build upgrade payloads